--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -1814,7 +1814,7 @@
     "hih_filter_model": "Udtag",
     "hih_filter_plasma": "Plasma filter",
     "wm_sell_point_video": "Video med salgsargumenter",
-    "wm_max": "Maks.",
+    "wm_max": "Maks",
     "timing_add_less_then_4_hour": "Opvarmningstiden er kort, den indstillede temperatur nås muligvis ikke",
     "ticket_save_success": "Billetten blev gemt",
     "native_language_tips": "Denne indstilling ændrer ikke applikationens sprog. Det bruges kun til kommunikationsformål.",
@@ -3254,7 +3254,7 @@
     "air_care_elder": "Ældre",
     "drum_illumination_desc": "Tromlebelysningen oplyser indersiden af tromlen, hvilket hjælper dig med at læsse og tømme maskinen - det er simpelthen nemmere at se den resterende sok inde i tromlen. Det letter også inspektion ved rengøring af løftere og løfteindsatse.",
     "turn_on_drum_illumination": "Tænd/sluk for belysning",
-    "wine_time": "Tid",
+    "wine_time": "gang",
     "delete_account_camel_case": "Slet konto",
     "program_mode_desc": "Programtilstand giver dig mulighed for at tilpasse dit tørreprogram og justere det baseret på dine behov. Nedenfor kan du læse om de forskellige tilstande og deres funktionalitet.",
     "program_mode_available": "Følgende vasketilstande er tilgængelige:",
@@ -4156,7 +4156,7 @@
     "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på Bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen eller konfigurere netværket på en anden måde.",
     "CL_DV_WM_pump_cleaning": "Rengøring af pumpe...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funktion, og din enhed dispenserer smart vaskemiddel og skyllemiddel, mens du vasker.",
-    "CL_DV_WM_detergent_department_key": "RUM TIL VASKEMIDDEL",
+    "CL_DV_WM_detergent_department_key": "Vaskemid.rum",
     "CL_DV_WM_Dosage_Amount_key": "Doseringsmængde",
     "CL_DV_WM_softener_department_key": "Skyllemid.rum",
     "CL_DV_WM_auto_does_with_detergent": "Autodosering med opvaskemiddel",
@@ -4164,7 +4164,7 @@
     "CL_DV_WM_normal_dosage_weight_tip": "Normal dosering: 4 ~ 5 kg tøjvægt.",
     "CL_DV_WM_pump_clean_note_1": "Bemærk: Hvis du ønsker at ændre indholdet af dispenseringskomponenten, skal du huske det ",
     "CL_DV_WM_pump_clean_note_2": "rengør først komponenten.",
-    "CL_DV_WM_Pump_clean_key": "Pumpe ren",
+    "CL_DV_WM_Pump_clean_key": "Pump rens",
     "CL_DV_WM_pump_clean_how_to_use": "Hvordan bruges?",
     "CL_DV_WM_pump_clean_how_to_use_1": "1.Tøm og fyld rummet med vand, før du aktiverer pumperens funktion.",
     "CL_DV_WM_pump_clean_how_to_use_2": "2. Aktiver pumpens rengøringsfunktion fra maskinsiden.",
@@ -4632,5 +4632,12 @@
     "CL_CF_HP_discover": "Opdage",
     "CL_DV_HOB_cooking_assist": "Madlavningsassistent",
     "CL_CF_CS_tuya_dehumidifier_choose_device_model": "VÆLG ENHEDSMODEL",
-    "CL_CF_FM_all_purchases_added_to_rf": "Alle dine køb er blevet tilføjet til køleskabet"
+    "CL_CF_FM_all_purchases_added_to_rf": "Alle dine køb er blevet tilføjet til køleskabet",
+    "CL_DV_HOB_guide_for_best_results": "Vejledning til de bedste resultater",
+    "CL_DV_HOB_program_content_step1": "Vælg mængden.",
+    "CL_DV_HOB_program_content_step2": "Vælg den kogezone, du vil bruge. ",
+    "CL_DV_HOB_program_content_step3": "Bekræft med \"WIFI\"-knappen på den valgte zone på induktionskogepladen.",
+    "CL_DV_HOB_temperature_content_step1": "Vælg temperaturen.",
+    "CL_CF_AS_your_device_offline": "Din enhed er offline",
+    "CL_CF_AS_waiting": "venter..."
 }
